--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^11.7.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
     "sass": "^1.88.0",
